Add WITHOUT_SYSTIME macro to remove system time related features.

--- a/app/minimal_rtkpos/gcc/makefile
+++ b/app/minimal_rtkpos/gcc/makefile
@@ -4,7 +4,7 @@ PACKAGE = minimal_rtkpos.exe
 
 BIN_PATH = /usr/bin:/usr/local/bin
 CXX = gcc
-CPPFLAGS = -DWITHOUT_FILE -DWITHOUT_THREAD -DTRACE
+CPPFLAGS = -DWITHOUT_FILE -DWITHOUT_THREAD -DWITHOUT_SYSTIME -DTRACE
 #-DENAGLO -DENAGAL -DENAQZS -DNFREQ=3
 #-mfpu=neon -mfloat-abi=softfp -ffast-math #for beaglebone
 CFLAGS = $(CPPFLAGS) #-Wall -O3 -ansi -pedantic
