--- a/app/minimal_rtkpos/msvc/minimal_rtkpos.vcxproj
+++ b/app/minimal_rtkpos/msvc/minimal_rtkpos.vcxproj
@@ -49,7 +49,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;WITHOUT_THREAD;WITHOUT_FILE;TRACE;_DEBUG;_CONSOLE;WITHOUT_THREAD;WITHOUT_FILE;TRACE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WITHOUT_THREAD;WITHOUT_FILE;WITHOUT_SYSTIME;TRACE;_DEBUG;_CONSOLE;WITHOUT_THREAD;WITHOUT_FILE;TRACE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -66,7 +66,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;WITHOUT_THREAD;WITHOUT_FILE;TRACE;NDEBUG;_CONSOLE;WITHOUT_THREAD;WITHOUT_FILE;TRACE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WITHOUT_THREAD;WITHOUT_FILE;WITHOUT_SYSTIME;TRACE;NDEBUG;_CONSOLE;WITHOUT_THREAD;WITHOUT_FILE;TRACE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
