Remove support SBUS/DGPS/LEX to reduce nav_t&raw_t structure size

--- a/app/minimal_ubx/gcc/makefile
+++ b/app/minimal_ubx/gcc/makefile
@@ -14,7 +14,7 @@ LDLIBS  = -lm -lpthread
 
 all        : minimal_ubx
 minimal_ubx     : minimal_ubx.o rtkcmn.o 
-minimal_ubx     : sbas.o rcvraw.o preceph.o pntpos.o
+minimal_ubx     : rcvraw.o preceph.o pntpos.o
 minimal_ubx     : ublox.o 
 minimal_ubx     : ephemeris.o ionex.o
 
